<resources>
    <string name="app_name">ExerciseSQLite</string>
    <string name="daftar_kontak">Daftar Kontak</string>
    <string name="tambah_data">Tambah Data</string>
    <string name="nama">Nama</string>
    <string name="nomor_telepon">Nomor Telepon</string>
    <string name="email">Email</string>
    <string name="alamat">Alamat</string>
    <string name="masukkan_nama">Masukkan Nama</string>
    <string name="masukkan_nomor_telepon">Masukkan Nomor Telepon</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="masukkan_alamat">Masukkan Alamat</string>
    <string name="simpan">SIMPAN</string>
    <string name="update_data">Update Data</string>
    <string name="batal">Batal</string>
    <string name="ubah_data">Ubah Data</string>
</resources>
