<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".tambah_data">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/Tv_Daftarkontak"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="Tambah Data"
            android:textSize="14pt"
            android:textStyle="bold"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/Tv_Name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nama"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"/>
                <EditText
                    android:id="@+id/Et_Nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_nama"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/Tv_Nohp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nomor_telepon"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"/>
                <EditText
                    android:id="@+id/Et_Nohp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nomor_telepon"
                    android:ems="10"
                    android:inputType="number"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/Tv_Email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"/>
                <EditText
                    android:id="@+id/Et_Email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_email"
                    android:ems="10"
                    android:inputType="textEmailAddress"/>
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp">

                <TextView
                    android:id="@+id/Tv_Alamat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alamat"
                    android:textSize="20sp"
                    android:textColor="@color/colorAccent"/>
                <EditText
                    android:id="@+id/Et_Alamat"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/masukkan_alamat"
                    android:ems="10"
                    android:inputType="textPersonName"/>
            </TableRow>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/Btn_Save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="150sp"
                    android:layout_gravity="center"
                    android:onClick="run"
                    android:text="@string/simpan"
                    android:textSize="8pt"
                    android:textStyle="bold"/>
            </LinearLayout>
        </TableLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>